# AES-encryptor

./: .gitignore  README.md
frontend/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs
