[package]
name = "nq-editor"
version = "1.2.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rfd = "0.14"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
