[package]
name = "nq-editor"
version = "2.0.0"
edition = "2024"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
nosleep = "0.2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rfd = "0.14"
rayon = "1.10"
thiserror = "1"
[build-dependencies]
tauri-build = { version = "2", features = [] }
